// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`detectOptions detects @flow comment 1`] = `
Object {
  "isFlow": true,
  "isJSX": false,
}
`;

exports[`detectOptions detects JSX 1`] = `
Object {
  "isFlow": false,
  "isJSX": true,
}
`;

exports[`detectOptions detects flow constructions in code 1`] = `
Object {
  "isFlow": true,
  "isJSX": false,
}
`;

exports[`detectOptions use file extension to detect flow 1`] = `
Object {
  "isFlow": true,
  "isJSX": false,
}
`;

exports[`detectOptions use file extension to detect flow 2`] = `
Object {
  "isFlow": true,
  "isJSX": false,
}
`;

exports[`detectOptions use file extension to detect jsx 1`] = `
Object {
  "isFlow": true,
  "isJSX": true,
}
`;
